feat: using SonarLint